--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: eric@smartlogic.io
 description: > # this means to ignore newlines until "baseurl:"
   This workshop will help familiarize you with these tools for sharing and revising projects online.
 
-baseurl: "/betamore-github"
+baseurl: ""
 url: "http://oestrich.github.io"
 twitter_username: ericoestrich
 github_username:  oestrich
